# agents

./: .gitignore  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  requirement.txt  test.ipynb
Agent/: agent1.ipynb  agent1.py  agent2.py  agent3.py  agent4.py  agent_responses_test.ipynb  agentic_rag.ipynb  agnt4.ipynb  context.json  utils.py
Rag/: Readme.md  doc_latest_sample.md  proposition_splitting.ipynb  rag1.ipynb  rag1.py  rag2.ipynb  rag2.py  rag3.ipynb  rag4.py
agent_1/: doc_v1.md  doc_v2.md  plan.txt  synthetic_data_generator.ipynb  synthetic_data_generator.py  synthetic_section_by_section_generator_v2.py  t1.ipynb
cloud-run-job/: .dockerignore  1_Dockerfile  2-Dockerfile  Dockerfile  pyproject.toml
cloud-run-job/app/: main.py  server.py
synthetic_data_generator/: doc_latest.md  plan.md  synthetic_data_generator.py
