[tool.poetry]
name = "run-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "^0.23.2"
pydantic = "^2.1"
package-name = "^0.1"
unstructured = {extras = ["md", "pdf"], version = "^0.16.17"}
langchain-community = "0.3.14"
pgvector = "^0.3.6"
langchain-google-cloud-sql-pg = "0.12.0"
langchain-google-vertexai = "^2.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
